--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,79 @@
+/*
+Principales recursos:
+  WebPage a mejorar:
+    https://eiderpro.com/#9b2d0546-5a2a-49f7-b6ed-f5421509d7cb
+    https://www.templatemonster.com/demo/58791.html
+
+
+  Paleta de colores a utilizar:
+    https://coolors.co/2d728f-e1eff6-97d2fb-348aa8-add7f6
+    https://coolors.co/d8dbe2-a9bcd0-58a4b0-373f51-1b1b1e
+
+  Extras:
+    Path WebDeb
+    https://www.reddit.com/r/webdev/comments/6z2a7d/a_learning_path_to_become_fullstack_web_developer/
+    Body structure:
+    https://www.w3schools.com/css/tryit.asp?filename=trycss3_flexbox_website2
+    InternetIsHard:
+    https://internetingishard.com/html-and-css/
+    CSS-TRICKS:
+    https://css-tricks.com/snippets/css/a-guide-to-flexbox/
+
+    RESOURCES:
+    https://unsplash.com/photos/D9q8pFooJ-g
+    https://codepen.io/gzaman/pen/zMKBjY
+
+
+
+
+*/
 * {
   font-family: 'Noto Sans HK', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; /*<-*/
+}
+
+.header-container {
+  height: 800px;
+  display: flex;
+  background-image: url("https://images.unsplash.com/photo-1447749506926-b897c10cffc1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80");
+
+  /*background-image: url("../images/ocean.svg");*/
+  background-size: cover;
+  background-repeat: no-repeat;
+  justify-content: center;
+}
+
+.header {
+  width: 1200px;
+  height: 800px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: red;
+}
+
+.logo {
+  display: flex;
+  flex-direction: column;
+}
+
+.eider-pro {
+  color: white;
+  text-align: center;
+  letter-spacing: 10px;
+  font-size: 80px;
+  font-weight: 700;
+}
+
+.outfitters {
+  color: white;
+  text-align: center;
+  letter-spacing: 20px;
+  font-size: 40px;
+  font-weight: 400;
+
+
+
 }
